[package]
name = "libp2p-stream"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[package.metadata.release]
release = false

[dependencies]
anyhow = "1"
futures = "0.3.31"
libc = "0.2.169"
libp2p = { version = "0.54.1", features = ["quic", "tokio"] }
libp2p-stream = "0.2.0-alpha"
rand = "0.8.5"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
