[package]
name = "mirrorp2p"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[package.metadata.release]
release = false

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "generate-key"
path = "bin/generate-key.rs"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
anyhow = "1"
futures = "0.3.31"
libc = "0.2.169"
libp2p = { version = "0.54.1", features = ["quic", "tcp", "tokio", "kad", "noise", "macros", "yamux", "identify", "ed25519"] }
libp2p-stream = "0.2.0-alpha"
rand = "0.8.5"
thiserror = "2.0.11"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros", "io-std"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[build-dependencies]
csbindgen = "1.8.0"
cbindgen = "0.27.0"

[dev-dependencies]
criterion = "0.5.1"
